fixing image visibility and alignment for home

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -7161,7 +7161,7 @@ h4 {
 }
 
 .nav.is-home {
-  background-color: rgba(255, 255, 255, 0.85) !important;
+  background-color: rgba(255, 255, 255, 0.9) !important;
   position: fixed;
   width: 100%;
 }
@@ -7198,7 +7198,7 @@ h4 {
 
 @media screen and (max-width: 768px) {
   .hero.is-landing {
-    background-color: rgba(0, 53, 95, 0.1) !important;
+    background-color: rgba(255, 255, 255, 0.2) !important;
   }
 
   .hero.is-landing:after {
