--- a/resources/assets/sass/_custom.sass
+++ b/resources/assets/sass/_custom.sass
@@ -11,7 +11,7 @@ h4
   font-size: $size-4
 
 .nav.is-home
-  background-color: rgba(255, 255, 255, .85) !important
+  background-color: rgba(255, 255, 255, .9) !important
   position: fixed
   width: 100%
 
@@ -41,7 +41,7 @@ h4
 
 @include mobile
   .hero.is-landing
-    background-color: rgba(0, 53, 95, .1) !important
+    background-color: rgba(255, 255, 255, .2) !important
   
   .hero.is-landing:after
     background: url(/images/crest.png) center 75px / 80% no-repeat fixed padding-box content-box
